--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css?family=Inconsolata");
+
 
 *{
     margin: 0;
@@ -372,3 +374,97 @@ footer{
     padding-left: 5%;
     }
 }
+
+.mobile-trig {
+  background: #2da9ff;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-align: center; }
+  .mobile-trig img {
+    margin: auto;
+    float: right; }
+  .mobile-trig #o {
+    margin-top: 3px; }
+  @media (min-width: 425.1px) {
+    .mobile-trig {
+      display: none; } }
+
+#navigation {
+  z-index: 1000; }
+
+#menu-main {
+  width: 100%; }
+  @media (min-width: 425.1px) {
+    #menu-main {
+      display: flex; } }
+  @media (min-width: 768.1px) {
+    #menu-main {
+      background-color: #2da9ff; } }
+
+.menu-item {
+  height: 30px;
+  text-align: center;
+  width: 100%;
+  display: block;
+  background-color: #2da9ff;
+  border-bottom: 1px solid #fff; }
+  .menu-item:first-child {
+    border-top: 1px solid #fff; }
+  @media (min-width: 425.1px) {
+    .menu-item {
+      display: inline-block;
+      box-sizing: border-box;
+      border: 0px;
+      border-right: 1px solid #fff; }
+      .menu-item:first-child {
+        border-top: 0px; } }
+  @media (min-width: 768.1px) {
+    .menu-item {
+      display: block;
+      float: left;
+      width: 125px; }
+      .menu-item:last-child {
+        border-right: 0px; }
+      .menu-item:hover {
+        background-color: #0a75be; } }
+
+@media (min-width: 425.1px) {
+  .sub-menu {
+    top: 30px;
+    width: 100%;
+    position: absolute; } }
+@media (min-width: 768.1px) {
+  .sub-menu {
+    display: block;
+    width: 124px;
+    left: 125px;
+    float: left; } }
+
+.sub-menu li {
+  border-top: 0px solid #fff;
+  border-bottom: 0px solid #fff; }
+  .sub-menu li:last-child {
+    border-bottom: 1px solid #fff; }
+  @media (min-width: 425.1px) {
+    .sub-menu li {
+      border: 0px;
+      border-top: 1px solid #fff; }
+      .sub-menu li:last-child {
+        border-top: 1px solid #fff;
+        border-bottom: 0px; } }
+  @media (min-width: 768.1px) {
+    .sub-menu li {
+      display: block;
+      float: left;
+      width: 124px;
+      height: 30px;
+      border-top: 0px; }
+      .sub-menu li:hover {
+        background-color: #0a75be; }
+      .sub-menu li:last-child {
+        border-top: 0px; } }
+
+a {
+  line-height: 30px;
+  text-decoration: none;
+  color: #fff; }
